feat: setup for project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=MyGPT
 
-openai.api.key=${MYGPT_BOT_API_KEY}
+openai.api.key=${MYGPT_OPENAI_API_KEY}
+telegram.bot.token=${MYGPT_TELEGRAM_BOT_TOKEN}
+telegram.bot.name=My GPT
